traces/bug_520.txt
src/bamglib/Mesh2.cpp:746: error: DEAD_STORE
  The value written to &k (type int) is never used.
Showing all 1 steps of the trace


src/bamglib/Mesh2.cpp:746:5: Write of unused value
744.           MeshError(100);}}
745.       
746.       k = OppositeVertex[ocut];
           ^
747.   
748.       Icoor2 detbij = bamg::det((*t)[i],(*t)[j],b);
